fix messages ui on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -763,6 +763,7 @@ button:active{
     -moz-animation: fakeLoading 0.8s ease-out infinite;
     -webkit-animation: fakeLoading 0.8s ease-out infinite;
     animation-iteration-count:5;
+    user-select: none;
 }
 .global__loading{
     padding: 0;
@@ -848,7 +849,6 @@ button:active{
 /*-------------Messages-----------*/
 .messages--container{
     height:100%;
-    min-height: 90vh;
 }
 #messages.messages--container .messages--desktop--card{
     border: 1px solid var(--gray);
@@ -952,9 +952,6 @@ button:active{
     margin-right:10px;
     z-index:200;
 }
-.messages--top--nav div h5:nth-child(2){
-    color: var(--gray);
-}
 .messages--view--users{
     padding:8px 0px;
     overflow-y:auto;
@@ -973,7 +970,7 @@ button:active{
     margin:0;
 }
 #messages .messages--view--users ul li .messages--user--info{
-    width:90%;
+    width: 140px;
     margin-left:8px;
     align-items:center;
 }
@@ -1138,7 +1135,7 @@ button:active{
     width:24px;
     height: 24px;
     align-self: flex-end;
-    margin:8px;
+    margin:8px 8px 16px;
 }
 #message .messsage--sender--img img{
     object-fit: contain;
@@ -1184,7 +1181,7 @@ button:active{
 }
 .message--content{
  max-width: 300px;
- max-height: 400px;
+ height: 372px;
  min-height: 200px;
  min-width: 210px;
  background-color: var(--second--gray);
@@ -1275,6 +1272,7 @@ button:active{
     height:60px;
     border-bottom: var(--main-border);
     white-space:nowrap;
+    justify-content: space-between;
 }
 .messages--chatbox--header .MuiAvatar-root{
     width:30px;
@@ -1291,7 +1289,6 @@ button:active{
     overflow-x: hidden;
 }
 #messages.messages--container .messages--user--info {
-    width:95%;
     align-items:center;
     z-index:100;
 }
@@ -1494,7 +1491,7 @@ button:active{
     top:50%;
     transform: translate(-50%, -50%);
     z-index:500;
-    right:8px;
+    right:0;
     width:auto;
     align-items:center;
 }
@@ -1524,7 +1521,7 @@ button:active{
 
 #messages.messages--container .loading--message--container{
     width: 100%;
-    height: 270px;
+    height: 372px;
     align-items: center;
     justify-content: flex-end;
     color: #fff;
@@ -1906,12 +1903,16 @@ a.prof__btn__unfollowed{
 }
 
 #mobNotifications.mob--notifications .noti--popup-item .noti--user--info p.noti__text{
-    width:90% !important;
+    width:100%;
     word-break: break-word;
     display:inline-block;
 }
-#mobNotifications.mob--notifications .noti--popup-item .noti--row{
-    width:80%;
+#mobNotifications.mob--notifications .noti--popup-item:after{
+    border:none !important;
+}
+.noti--popup-item .noti--row{
+    width:70%;
+    white-space: normal;
 }
 /* ------x---------Mobile Notifications------x------------ */
 /* -------------------Comments Modal----------------------- */
@@ -2279,7 +2280,7 @@ a.prof__btn__unfollowed{
     }
     #messages.messages--container .messages--chatbox--body{
         overflow-y:auto;
-        padding:44px 10px 25px;
+        padding:44px 10px 40px;
     }
     #messages .messages--view--users ul li .messages--user--info{
         width:100%;
@@ -2424,6 +2425,12 @@ a.prof__btn__unfollowed{
     }
     #messages.messages--container{
         overflow:hidden;
+    }
+    .messages--container{
+        min-height: 90vh;
+    }
+    #messages.messages--container .messages--user--info {
+        width:70%;
     }
 }
 @media only screen and (max-width:760px){
